--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "concurrently --kill-others --raw \"npm:expose-tunnel\" \"expo start\"",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "expose-tunnel": "lt --port 3000 --subdomain limo-app-server"
   },
   "dependencies": {
     "expo": "~46.0.9",
@@ -15,7 +16,9 @@
     "react-native": "0.69.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "concurrently": "^7.4.0",
+    "localtunnel": "^2.0.2"
   },
   "private": true
 }
