--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@smartcar/auth": "^2.9.0",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
+    "formik": "^2.2.9",
     "react": "18.0.0",
     "react-native": "0.69.5",
     "styled-components": "^5.3.6"
