--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "expose-tunnel": "lt --port 3000 --subdomain limo-app-server"
   },
   "dependencies": {
-    "@react-navigation/material-bottom-tabs": "^6.2.4",
+    "@react-navigation/bottom-tabs": "^6.5.4",
+    "@react-navigation/drawer": "^6.5.8",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@smartcar/auth": "^2.9.0",
