--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prettier-fix": "prettier --write ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/drawer": "^6.5.8",
     "@react-navigation/native": "^6.0.13",
