--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react-native": "0.69.9",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-paper": "^4.12.5",
+    "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-text-link": "^1.0.0",
     "react-native-vector-icons": "^9.2.0",
     "react-navigation-tabs": "^2.11.2",
     "styled-components": "^5.3.6"
