--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-text-link": "^1.0.0",
     "react-native-vector-icons": "^9.2.0",
     "react-navigation-tabs": "^2.11.2",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
