Changed on main, renamed vehicle check to appropiat screen and component name to CheckoutForm, CheckinForm

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
+        "Checkin",
         "formik",
         "Ionicons",
+        "marginbottom",
         "navigations",
         "privatedriver"
     ]
