--- a/package.json
+++ b/package.json
@@ -17,17 +17,18 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@smartcar/auth": "^2.9.0",
-    "expo": "~46.0.9",
-    "expo-image": "^1.0.0",
-    "expo-status-bar": "~1.4.0",
+    "axios": "^1.6.2",
+    "expo": "^49.0.18",
+    "expo-image": "~1.3.5",
+    "expo-status-bar": "~1.6.0",
     "formik": "^2.2.9",
-    "react": "18.0.0",
-    "react-native": "0.69.9",
-    "react-native-gesture-handler": "~2.5.0",
+    "react": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-paper": "^4.12.5",
-    "react-native-reanimated": "~2.9.1",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-text-link": "^1.0.0",
     "react-native-vector-icons": "^9.2.0",
     "react-navigation-tabs": "^2.11.2",
@@ -35,9 +36,9 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.19.3",
     "concurrently": "^7.4.0",
-    "localtunnel": "^2.0.2",
+    "localtunnel": "^1.8.3",
     "prettier": "^2.8.4"
   },
   "private": true,
