--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@smartcar/auth": "^2.9.0",
+    "@types/react-native": "~0.69.1",
     "axios": "^1.6.2",
+    "axios-retry": "^4.4.2",
     "expo": "^49.0.0",
     "expo-image": "~1.3.5",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.2.9",
     "react": "18.2.0",
     "react-native": "0.72.10",
+    "react-native-calendars": "^1.1306.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-paper": "^4.12.5",
     "react-native-reanimated": "~3.3.0",
@@ -34,9 +37,8 @@
     "react-native-vector-icons": "^9.2.0",
     "react-navigation-tabs": "^2.11.2",
     "styled-components": "^5.3.6",
-    "yup": "^1.2.0",
     "typescript": "^4.6.3",
-    "@types/react-native": "~0.69.1"
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
