--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "axios-retry": "^4.4.2",
     "expo": "^49.0.0",
     "expo-image": "~1.3.5",
-    "expo-localization": "~14.3.0",
+    "expo-localization": "~15.0.3",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.2.9",
     "moment-timezone": "^0.5.45",
-    "react": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.72.10",
     "react-native-calendars": "^1.1306.0",
     "react-native-gesture-handler": "~2.12.0",
@@ -40,14 +41,16 @@
     "react-navigation-tabs": "^2.11.2",
     "rimraf": "^6.0.1",
     "styled-components": "^5.3.6",
-    "typescript": "^4.6.3",
     "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "concurrently": "^7.4.0",
     "localtunnel": "^1.8.3",
-    "prettier": "^2.8.4"
+    "prettier": "^2.8.4",
+    "typescript": "^5.5.4"
   },
   "private": true,
   "prettier": {
