Calendar event screen (#20)
* Create EventScreen use Agenda calendar component and add CalendarItem component to setEvents

* Update PrivateDriverApp to use local time zone, and update dependencies

* Reinstall Node Modules, update tsconfig to include jsx

* Setup InfDialog component, more event details popup

* Calendar get local time

* wip

* add hide tab bar when full screen calender wip

---------

Co-authored-by: Jeff Webb <webbwear@gmail>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,9 @@
 {
   "compilerOptions": {},
-  "extends": "expo/tsconfig.base"
+  "extends": "expo/tsconfig.base",
+  "jsx": "react",
+  "include": [
+    "src/**/*",
+    "src/components/styles.tsx"
+  ]
 }
