--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
     "@types/react-native": "~0.69.1",
     "axios": "^1.6.2",
     "axios-retry": "^4.4.2",
-    "expo": "^52.0.23",
-    "expo-image": "~2.0.3",
-    "expo-localization": "~16.0.0",
-    "expo-status-bar": "~2.0.0",
+    "expo": "^52.0.26",
+    "expo-image": "~2.0.4",
+    "expo-localization": "~16.0.1",
+    "expo-status-bar": "~2.0.1",
     "formik": "^2.2.9",
     "moment-timezone": "^0.5.45",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.76.5",
+    "react-native": "^0.76.6",
     "react-native-calendars": "^1.1306.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^4.12.5",
